--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<button onclick="navigator.geolocation.getCurrentPosition()">打开</button>
+<button onclick="navigator.geolocation.getCurrentPosition((position)=>alert(position.coords.longitude))">打开</button>
