--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <button onclick="navigator.geolocation.getCurrentPosition((position)=>alert(position.coords.longitude))">打开</button>
+<a href="https://vuejs.org/" target="_blank">Vue</a>
