--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <button onclick="navigator.geolocation.getCurrentPosition((position)=>alert(position.coords.longitude))">打开</button>
 <a href="https://vuejs.org/" target="_blank">Vue</a>
+<button onclick="window.open('https://en.uniapp.dcloud.io/')">打开</button>
