--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<button onclick="navigator.geolocation.getCurrentPosition((position)=>alert(position.coords.longitude))">打开</button>
 <a href="https://vuejs.org/" target="_blank">Vue3</a>
-<button onclick="window.open('https://en.uniapp.dcloud.io/')">打开</button>
-<a href="./login.html" target="_blank">登录</a>
+<button onclick="window.open('https://en.uniapp.dcloud.io/')">Link</button>
+<a href="./login.html" target="_blank">Click here to Login</a>
