--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <a href="https://vuejs.org/" target="_blank">Vue3</a>
 <button onclick="window.open('https://en.uniapp.dcloud.io/')">Link</button>
-<a href="./login.html" target="_blank">Click here to Login</a>
+<br/>
+<a href="./login.html">Click here to the Login Page</a>
