--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<style>*{font-size:36px}</style>
 Username:<input type="text" id="username" />
 Password:<input type="password" id="password" />
 <a href="./index.html">Back</a>
