--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<style>*{font-size:50px}</style>
-<a href="https://vuejs.org/" target="_blank">Vue3</a>
-<button onclick="window.open('https://en.uniapp.dcloud.io/')">Link</button>
-<br/>
-<a href="./login.html">Click here to the Login Page</a>
+<input type="number" password />
