--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
-<style>.hide{-webkit-text-security:disc}</style>
-<script>
-const handleClick = (el) => {
-  if (el.innerText === "表示") {
-    el.innerText = "非表示";
-    document.getElementById("pswnum").className = "";
-  } else {
-    el.innerText = "表示";
-    document.getElementById("pswnum").className = "hide";
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+</head>
+<style>
+  video {
+    margin: 0 auto;
+    width: 100%;
+    height: 75%;
   }
-}
+</style>
+<script>
+  window.onload = () => {
+    const errorMsg = document.getElementById('errorMsg')
+  }
+  const handleClick = (e) => {
+    navigator.mediaDevices.getDisplayMedia({ audio: true, video: true }).then(function (stream) {
+      e.target.disabled = true
+      window.open('https://vkceyugu.cdn.bspapp.com/VKCEYUGU-dc-site/b3f1d0b0-5168-11eb-bd01-97bc1429a9ff.pdf')
+      document.querySelector('video').srcObject = stream
+      stream.getVideoTracks()[0].addEventListener('ended', () => {
+        e.target.disabled = false
+      })
+    }, function (error) {
+      errorMsg.innerHTML += `<p>getDisplayMedia error: ${error.name}</p>`
+      if (typeof error !== 'undefined') {
+        console.error(error)
+      }
+    })
+  }
 </script>
-<button onclick="handleClick(this)">非表示</button>
-<input id="pswnum" type="text" />
+
+<body>
+  <div>
+    <video id="gum-local" autoplay playsinline muted></video>
+    <button onclick="handleClick(event)">Share</button>
+    <div id="errorMsg"></div>
+  </div>
+</body>
+
+</html>
