--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html>
 <head></head>
 <body>
-  <div style="width: 100px">
-    <div>1</div>
-    <div>2</div>
-  </div>
+  <div style="font-family: 'Hiragino Sans'">日本中1234567890poiuytrewqasdfghjklmnb</div>
 </body>
 </html>
