--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <head></head>
 <body>
   <div style="font-family: 'Hiragino Sans', cursive;">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <div style="font-family: cursive, 'Hiragino Sans';">日本中1234567890poiuytrewqasdfghjklmnb</div>
 </body>
 </html>
