--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             ch: '微软雅黑',
             en: 'Microsoft Yahei'
         }, {
-            ch: '微软正黑体',
+            ch: '微软正黑体2',
             en: 'Microsoft JhengHei'
         }, {
             ch: '楷体',
@@ -62,7 +62,7 @@
             en: 'STXingkai'
         }, {
             ch: '冬青黑体简',
-            en: 'Hiragino Sans GB'
+            en: 'Hiragino Sans'
         }, {
             ch: '兰亭黑-简',
             en: 'Lantinghei SC'
