--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head></head>
 <body>
-  <div style="font-family: 'Hiragino Sans', monospace;">日本中1234567890poiuytrewqasdfghjklmnb</div>
-  <div style="font-family: monospace, 'Hiragino Sans';">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <div style="font-family: 'HiraginoSans-W7', monospace;">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <div style="font-family: monospace, 'HiraginoSans-W7';">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <div style="font-family: 'Hiragino Sans W7', monospace;">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <div style="font-family: monospace, 'Hiragino Sans W7';">日本中1234567890poiuytrewqasdfghjklmnb</div>
 </body>
 </html>
