--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<html>
+<html style="margin:0">
 <head></head>
-<body>
-  <div style="font-family: 'HiraginoSans-W7', monospace;">日本中1234567890poiuytrewqasdfghjklmnb</div>
-  <div style="font-family: monospace, 'HiraginoSans-W7';">日本中1234567890poiuytrewqasdfghjklmnb</div>
-  <div style="font-family: 'Hiragino Sans W7', monospace;">日本中1234567890poiuytrewqasdfghjklmnb</div>
-  <div style="font-family: monospace, 'Hiragino Sans W7';">日本中1234567890poiuytrewqasdfghjklmnb</div>
+<body style="margin:0">
+  <div style="width: 100vw;height: 100vh;position:fixed;z-index:99999">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <input type="text" autofocus />
 </body>
 </html>
