--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html style="margin:0">
 <head></head>
 <body style="margin:0">
-  <div style="width: 100vw;height: 100vh;position:fixed;z-index:99999">日本中1234567890poiuytrewqasdfghjklmnb</div>
+  <div style="background：#fff;width: 100vw;height: 100vh;position:fixed;z-index:99999">日本中1234567890poiuytrewqasdfghjklmnb</div>
   <input type="text" autofocus />
 </body>
 </html>
