--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body style="margin:0">
   <div style="background: #fff;width: 100vw;height: 100vh;position:fixed;z-index:99999">日本中1234567890poiuytrewqasdfghjklmnb</div>
   <input type="text" autofocus />
+  <textarea contenteditable="false"></textarea>
 </body>
 </html>
