--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html style="margin:0">
+<html style="background:#F00">
 <head></head>
-<body style="margin:0">
-  <textarea contenteditable="false"></textarea>
+<body style="background:#F00">
+  <textarea></textarea>
 </body>
 </html>
