--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html style="background:#F00">
 <head></head>
 <body style="background:#F00">
-  <textarea></textarea>
+  <textarea style="background:#F00"></textarea>
 </body>
 </html>
