--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       line-height: 32px;
     }
   </style>
+  <script>
+    onLoad = () => alert(document.documentElement.outerHTML)
+  </script>
 </head>
 <body>
   <div>1</div>
