--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
   </style>
   <script>
-    onLoad = () => alert(document.documentElement.outerHTML)
+    onload = () => alert(document.documentElement.outerHTML)
   </script>
 </head>
 <body>
