--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
   </style>
   <script>
-    onload = () => alert(document.documentElement.outerHTML)
+    window.onload = () => alert('1')
   </script>
 </head>
 <body>
