--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
   </style>
   <script>
-    window.onload = () => alert('1')
+    settimeout(() => alert('1'),10000)
   </script>
 </head>
 <body>
