--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
   </style>
   <script>
-    settimeout(() => alert('1'),10000)
+    setTimeout(() => alert('1'),10000)
   </script>
 </head>
 <body>
