--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
     <title>Test Iframe</title>
   </head>
-  <body>
-    <iframe src="./index.html"></iframe>
+  <body style="margin:0">
+    <iframe src="./index.html" style="width:100%;height:100%"></iframe>
   </body>
 </html>
