--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<input type="text" style="caret-color: red;">
+<body><div style="
+    position: fixed;
+    top: 0;
+    height: 100px;
+    width: 100%;
+    background: #fff;
+">123</div><input type="text" style="margin: 1000px 0;caret-color: red;">
+</body>
