--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
+</head>
 <body><div style="
     position: fixed;
     top: 0;
