--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     height: 100px;
     width: 100%;
     background: #fff;
-">123</div><input type="text" style="margin: 1000px 0;caret-color: red;">
+">123</div><input type="text" style="margin: 1000px 0;caret-color: transparent;">
 </body>
