--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<head>
+<!DOCTYPE html>
+<html><head>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
+    <script>
+        f=()=>{
+            setTimeout(() => {
+                document.getElementById('id1').style="caret-color: transparent"
+            }, 5000)
+        }
+    </script>
 </head>
-<body><div style="
-    position: fixed;
-    top: 0;
-    height: 100px;
-    width: 100%;
-    background: #fff;
-">123</div><input type="text" style="margin: 1000px 0;caret-color: transparent;">
+<body>
+    <input id="id1" type="text" style=""/>
+    <button onclick="f()">123</button>
 </body>
+    </html>
