--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       line-height: 32px;
     }
   </style>
+  <script>window.onbeforeunload = function(e) {return "returnValue属性值的文字不能自定义，写不写都行的";};</script>
 </head>
 <body>
   <div>1</div>
