--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       line-height: 32px;
     }
   </style>
-  <script>
-    window.addEventListener("beforeunload", function (e) {
-  var confirmationMessage = "\\o/";
-
-  (e || window.event).returnValue = confirmationMessage; //Gecko + IE
-  return confirmationMessage; //Webkit, Safari, Chrome etc.
+  <script>window.addEventListener('beforeunload', (event) => {
+  // Cancel the event as stated by the standard.
+  event.preventDefault();
+  // Chrome requires returnValue to be set.
+  event.returnValue = '';
 });
   </script>
 </head>
